	- make dbiTags per-rpmdb rather than global.
	- permit rpmgi to iterate over indices.
	- teach rpmtsSolve() about dirnames/linktos dependencies.
	- add rpmdbBlockDBI() to disable index access.
	- automagically extract scriptlet executable dependencies.
	- fix: don't close stdin exec'ing pgp/gpg, harmless warning (#197602).
	- permit waitpid to be used instead of reaping SIGCHLD (#163151).

4.4.5 -> 4.4.6:
	- start 4.4.6 development.
	- perl: fix exuberant cut-n-paste.
	- macosx: remove compile nits.
	- dirty hacks to handle neon-0.26.0.
	- make rpmps internals opaque.
	- make rpmdb internals opaque.
	- fix: hGetNEVRA segfault if missing arch tag (i.e. pubkeys).
	- updated RU man pages (#185260).
	- fix: tag sort is stable iff identical prefixes, nuke RPMTAG_D alias.
	- add :yaml query format extension.
	- fix: segfault brain fart with query format extension.
	- start making rpmRelocation opaque.
	- push rpmHeaderGetEntry() into rpm-python bindings.
	- trick up --yaml output to avoid parsing problems from data.
	- force utf-8 encoding for yaml/xml spewed strings.
	- fix autogen.sh and configure.ac breakage.
	- permit --without-lua.
	- assign expected {scalar,array} return types to header tags.
	- permit sha1/sha256/sha384/sha512 file digests as well as md5.
	- fix: obscure segfault erasing multiply installed packages.
	- fix: set file contexts on non-packaged dirs iff selinux enabled.
	- add RIPEMD-160 and RIPEMD-128 digest support.
	- drop almost all dependency whiteout from default rpm configgery.
	- eliminate skipDirs fingerprint band-aid.
	- eliminate support for _noDirTokens, refactoring as appropriate.
	- eliminate SOURCEPACKAGE tag, use non-existence of SOURCERPM instead.
	- add macros to parameterize rpmds probe dependency defaults.
	- tsort for erased packages (#89500).
	- refactoring to integrate erasure ordering.
	- create RPMTAG_DIRNAMES dependency set, attach to transaction element.